--- a/style/main.css
+++ b/style/main.css
@@ -38,6 +38,9 @@ a {
       color:#0A1236;
       overflow-x:hidden;
     }
+        main{
+min-height:100vh;
+    }
 
         .title { line-height:1.00; font-size:clamp(2.6rem, 7.2vw, 3.5rem); padding-bottom: 2rem; }
 
